[package]
name = "r6stats_client"
version = "0.1.0"
authors = ["Jan Adä"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.1"
async-trait = "0.1"

[features]
multithreaded = []
