[package]
name = "r6stats_client"
version = "0.1.1"
authors = ["Jan Adä <jan561.github@gmail.com>"]
edition = "2018"
description = "Client for the r6stats API."
readme = "README.md"
repository = "https://github.com/Jan561/r6stats_client"
license = "MIT"
keywords = ["r6", "r6stats", "rainbow-six"]

[dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }
reqwest = { version = "0.10", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.1"

[features]
default = ["ratelimiting"]
ratelimiting = []
threadsafe = ["tokio/sync"]
